--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,30 @@
 server {
     listen 80;
+    client_max_body_size 10M;
+
+    location /media/ {
+        root /etc/nginx/html;
+    }
+
+    location /api/ {
+      proxy_set_header Host $http_host;
+      proxy_pass http://backend:8000/api/;
+    }
+
+    location /admin/ {
+      proxy_set_header Host $http_host;
+      proxy_pass http://backend:8000/admin/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location ~ ^/static/(admin|rest_framework)/ {
+        root /etc/nginx/html;
+    }
+    
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
