Second review try

--- a/backend/.env_example
+++ b/backend/.env_example
@@ -1,3 +1,4 @@
 POSTGRES_USER=  #Username
 POSTGRES_PASSWORD=  #Password, required
 POSTGRES_DB=  # Name of database
+SECRET_KEY= # Secret key dor django
